<resources>
    <string name="app_name">Anaya Fashion</string>
    <string name="save_data">Save Data</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="enter_text_to_save">Enter Text To Save</string>
    <string name="parth_amp_pari"><![CDATA[Parth & Pari]]></string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loading">Loading...</string>
    <string name="something_went_wrong">Something went wrong. Please Try Again Later!</string>
</resources>