<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription,MissingConstraints">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/bg_top" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:src="@drawable/logo_without_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/menu_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="220dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/loginTv" />

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:drawableEnd="@drawable/password_eye_close"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/emailEt" />


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/passwordEt" />

</androidx.constraintlayout.widget.ConstraintLayout>